--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "downtube",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "index.js",
   "license": "MIT",
   "bin": {
     "downtube": "index.js"
   },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "type": "module",
   "dependencies": {
+    "chalk": "^5.3.0",
+    "figlet": "^1.7.0",
+    "gradient-string": "^2.0.2",
+    "inquirer": "^9.2.11",
     "ytdl-core": "^4.11.5",
     "ytpl": "^2.3.0"
   }
